--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "we-chat-backend",
+  "name": "wechat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "concurrently \"cd client && npm start\" \"cd server && npm start\" "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "mongoose": "^6.4.5",
-    "nodemon": "^2.0.19"
+    "concurrently": "^7.3.0",
+    "path": "^0.12.7"
   }
 }
